test/sema/traits/not_a_trait_struct_impl_list.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {
    // CHECK: [[# @LINE + 1 ]]:10: error: 'NotATrait' is not a trait
    impl NotATrait;
}

fn main() {}

// CHECK-NOT: main {() -> unit}
